--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.2",
+    "@astrojs/vercel": "^7.8.2",
+    "@neondatabase/serverless": "^0.10.3",
     "astro": "^4.16.10",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
